tests/baselines/reference/jsFileCompilationNonNullAssertion.errors.txt
error TS5102: Option 'out' has been removed. Please remove it from your configuration.
  Use 'outFile' instead.
/src/a.js(1,1): error TS8013: Non-null assertions can only be used in TypeScript files.


!!! error TS5102: Option 'out' has been removed. Please remove it from your configuration.
!!! error TS5102:   Use 'outFile' instead.
==== /src/a.js (1 errors) ====
    0!
    ~~
!!! error TS8013: Non-null assertions can only be used in TypeScript files.
    